Updated the authentication capabilities and session lifecycle flow to document